--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   connectivity: ^3.0.6
   http: ^1.2.0
   animations: ^2.0.11
+  pie_chart: ^5.4.0
 
 dev_dependencies:
   flutter_test:
