--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   http: ^1.2.0
   animations: ^2.0.11
   pie_chart: ^5.4.0
+  sqflite: ^2.3.3
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
